# osmcategorizer_rust

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: assessor.rs  cli.rs  lib.rs  main.rs  main_old.rsold  osm_conditions.rs
