[package]
name = "osmcategorizer_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
osmpbf = { version = "0.3", default-features = false, features = ["rust-zlib"] }
geo = { version = "0.30.0", default-features = false }
csv = { version = "1.3.1", default-features = false }
anyhow = { version = "1.0.97", default-features = false, features = ["std"] }
log = { version = "0.4.27", default-features = false }
benchmark-rs = "0.1.1"
itertools = { version = "0.14.0", default-features = false, features = ["use_std"] }
argh = "0.1.13"
simple_logger = { version = "5.0.0", default-features = false }
